<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="24dp">

        <ImageView
            android:id="@+id/logo_juli.png"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/logo_juli"
            android:layout_gravity="center"
            android:contentDescription="Logo Juli Kopi"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/welcomeText"
            android:text="@string/welcome_text"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"/>

        <Button
            android:id="@+id/btnLogin"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/btnRegister"
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/productListButton"
            android:text="@string/product_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/orderButton"
            android:text="@string/order_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/historyButton"
            android:text="@string/transaction_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Logout"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</ScrollView>
